Updated Yes Html files

--- a/YesPojiQuota/HTMLSource/LoginPageFail.html
+++ b/YesPojiQuota/HTMLSource/LoginPageFail.html
@@ -1,4 +1,18 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+﻿<!-- Headers
+    GET https://wifi.yes.my/pas/parsed/utm1/index_desktop.html?key=utm1-0bc9c7352f7eb4bfd5a6f079a6cfdfeb&dummy=true HTTP/1.1
+    Host: wifi.yes.my
+    User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:52.0) Gecko/20100101 Firefox/52.0
+    Accept: text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8
+    Accept-Language: en-US,en;q=0.5
+    Accept-Encoding: gzip, deflate, br
+    Referer: https://apc.aptilo.com/cgi-bin/login
+    Cookie: aptilo-yesIdType=UTM Student; aptilo-user=; aptilo-pass=
+    Connection: keep-alive
+    Upgrade-Insecure-Requests: 1
+-->
+
+
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
