--- a/YesPojiQuota/HTMLSource/SuccessRedirectedResoponse.html
+++ b/YesPojiQuota/HTMLSource/SuccessRedirectedResoponse.html
@@ -1,4 +1,14 @@
-﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+﻿<!--HTTP/1.1 200 OK
+Date: Fri, 14 Apr 2017 03:54:07 GMT
+Server: Apache
+Accept-Ranges: bytes
+Keep-Alive: timeout=15, max=97
+Connection: Keep-Alive
+Transfer-Encoding: chunked
+Content-Type: text/html-->
+
+
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 
 <html>
 <head>
