Updated html files

--- a/YesPojiQuota/HTMLSource/FailResponse.html
+++ b/YesPojiQuota/HTMLSource/FailResponse.html
@@ -1,6 +1,4 @@
-﻿
-
-<!--HTTP/1.1 200 OK
+﻿<!--HTTP/1.1 200 OK
 Date: Fri, 14 Apr 2017 03:53:33 GMT
 Server: Apache
 Set-Cookie: apcauth=90610c3315a0,90610c3315a0,3ca80c0729eb213f35aab29ef80df91d; path=/; expires=Sat, 21-Apr-2018 03:53:33 GMT
@@ -11,40 +9,17 @@ Content-Type: text/html
     -->
 
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
-
 <HTML>
-
 <SCRIPT LANGUAGE="JavaScript">
-
 <!--
-
 document.location.replace("https://wifi.yes.my/pas/parsed/utm1/index_desktop.html?key=utm1-0bc9c7352f7eb4bfd5a6f079a6cfdfeb&dummy=true ")
-
 //-->
-
 </SCRIPT>
-
 <HEAD>
-
     <TITLE>Forwarding...</TITLE>
-
     <META HTTP-EQUIV="REFRESH" CONTENT="1; URL=https://wifi.yes.my/pas/parsed/utm1/index_desktop.html?key=utm1-0bc9c7352f7eb4bfd5a6f079a6cfdfeb&dummy=true ">
-
 </HEAD>
 
 <BODY>
 </BODY>
-
 </HTML>
-
-<!DOCTYPE html>
-
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="utf-8" />
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
